--- a/Dyplom/dodatekA.tex
+++ b/Dyplom/dodatekA.tex
@@ -116,7 +116,7 @@ Opis pól do konfiguracji:
 \begin{itemize}
     \item \texttt{SPRING\_MAIL\_HOST}, \texttt{SPRING\_MAIL\_PORT} -- domyślne wartości dla serwera SMTP usługi Gmail.
     \item \texttt{SPRING\_MAIL\_USERNAME}, \texttt{SPRING\_MAIL\_PASSWORD} -- dane logowania do konta Gmail, które będzie wykorzystywane do wysyłania wiadomości e-mail. Wartości te należy uzupełnić własnym adresem e-mail i hasłem (lub hasłem aplikacji).
-    \item \texttt{SUPER\_ADMIN\_FIRST\_NAME}, \texttt{SUPER\_ADMIN\_LAST\_NAME}, \texttt{SUPER\_ADMIN\_EMAIL}, \texttt{SUPER\_ADMIN\_PASSWORD}, \texttt{SUPER\_ADMIN\_PHONE} -- dane pierwszego użytkownika z rolą superadministratora. Wartości te można dostosować według potrzeb organizacji.
+    \item \texttt{SUPER\_ADMIN\_FIRST\_NAME}, \texttt{SUPER\_ADMIN\_LAST\_NAME}, \texttt{SUPER\_ADMIN\_EMAIL}, \texttt{SUPER\_ADMIN\_PASSWORD}, \texttt{SUPER\_ADMIN\_PHONE} -- dane pierwszego użytkownika z~rolą superadministratora. Wartości te można dostosować według potrzeb organizacji.
 \end{itemize}
 
 \subsection{Konfiguracja konta Gmail do wysyłania e-maili}
